[package]
name = "spectronom"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.1"
cpal = "0.15.3"
crossbeam-channel = "0.5.13"
itertools = "0.13.0"
microfft = "0.6.0"
num-complex = "0.4.6"
rand = "0.8.5"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.samply]
inherits = "release"
debug = true
